--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "XigeCloud\\": "app/"
         },
         "classmap": [
             "database/seeds",
