chore：自动设置分类编号

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "fisher/package-sso": "^1.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "overtrue/pinyin": "^4.0"
     },
     "repositories": [
         {
