chore: 增加文件处理、hashid包

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 /public/storage
 /public/docs
 /storage/*.key
+/storage/authorized_keys
 /storage/debugbar
+/storage/files
 /vendor
 .env
 .phpunit.result.cache
