--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,13 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "fisher/package-sso": "^1.0",
+        "graham-campbell/flysystem": "^5.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "overtrue/pinyin": "^4.0"
+        "league/flysystem-cached-adapter": "^1.0",
+        "league/flysystem-sftp": "^1.0",
+        "overtrue/pinyin": "^4.0",
+        "vinkla/hashids": "^5.1"
     },
     "repositories": [
         {
