--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "league/flysystem-cached-adapter": "^1.0",
         "league/flysystem-sftp": "^1.0",
         "overtrue/pinyin": "^4.0",
+        "predis/predis": "^1.1",
         "vinkla/hashids": "^5.1"
     },
     "repositories": [
